Changed CSV-Create and -Read class to match current version of Project (class). Created test classes for current CSVReader and CSVCreate classes (now: not covering all lines, but close).